--- a/views/partials/html-head.ejs
+++ b/views/partials/html-head.ejs
@@ -6,7 +6,8 @@
   <link rel="shortcut icon" href="../assets/images/MusicNoteFavicon.png" type="image/x-icon">
   <link rel="stylesheet" href="/stylesheets/style.css">
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda+SC:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Matemasie&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda+SC:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Jersey+10&family=Matemasie&display=swap');
     </style>
   <title>Musical Genius</title>
-  <H1>MUSICAL GENIUS</H1>
+  <link rel="shortcut icon" href="../assets/MusicNote.png" type="image/x-icon">
+  <h1 class="title">MUSICAL GENIUS</H1>
