--- a/views/auth/sign-in.ejs
+++ b/views/auth/sign-in.ejs
@@ -1,16 +1,16 @@
 <%- include('../partials/html-head') %>
 <%- include('../partials/nav') %>
 
-<section class="signIn">
+<section class="signin">
 <form class="auth" action="/auth/sign-in" method="POST">
   <h1>Sign in</h1>
-  <label for="username">Username:</label>
-  <input type="text" name="username" id="username" />
+  <label for="username"></label>
+  <input class="signuphover" type="text" name="username" id="username" placeholder="Username" />
   <br>
-  <label for="password">Password:</label>
-  <input type="password" name="password" id="password" />
+  <label for="password"></label>
+  <input class="signuphover" type="password" name="password" id="password" placeholder="Password" />
   <br>
-  <button type="submit">Sign in</button>
+  <button class="btnsignin" type="submit">Sign in</button>
 </form>
 </section>
 <%- include('../partials/footer') %>
