--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/html-head') %>
 <%- include('../partials/nav') %>
 
-<h1 class="All">All Geniuses</h1>
+<h1 class="all">All Geniuses</h1>
 
 <section class="genius">
 <% users.forEach(u => { %>
