--- a/views/songs/edit.ejs
+++ b/views/songs/edit.ejs
@@ -2,16 +2,16 @@
 <%- include('../partials/nav') %>
 
 <main>
-  <h1>Edit your Song</h1>
   <div class="editsong">
+    <h3>Edit your Song</h3>
   <form id="new-song" action="/songs/<%= song._id %>?_method=PUT" method="POST">
-    <label for="title-input">Add Song Title:</label>
+    <label for="title-input">Song Title:</label>
     <input type="text" name="title" id="title-input" value="<%= song.title %>"><br>
-    <label for="artist-input">Add Artist</label>
+    <label for="artist-input">Artist:</label><br>
     <input type="text" name="artist" id="artist-input" value="<%= song.artist %>"><br>
     <label for="word-association-input">Emotion for song (One Word):</label>
     <input type="text" name="wordAssociation" id="word-association-input" value="<%= song.wordAssociation %>"><br>
-    <label for="rank-input">Rank this song? (1 is ranked best)</label>
+    <label for="rank-input">Rank this song? (1 best)</label><br>
     <input type="number" name="rank" id="rank-input" min="1" max="5" value="<%= song.rank %>"> <br>
     <br>
     <button class="btn" type="submit">Edit Song</button>
