--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -100,7 +100,7 @@ nav > a {
 h2 {
   text-align: center;
   height: 30px;
-
+  
 }
 
 h3 {
@@ -184,10 +184,11 @@ p {
 }
 
 .profilename {
-    text-shadow: 0 2px #13262F;
-    font-weight: bold;
-    color: #ed565b;
-    text-decoration: underline #13262F;
+  text-shadow: 0 2px #13262F;
+  font-weight: bold;
+  color: #ed565b;
+  text-decoration: underline #13262F;
+  text-align: center;
 }
 
 .store {
@@ -210,14 +211,17 @@ p {
 }
 
 .scrollme {
-  width: 82vw;
-  /* background: #f6f6f6; */
+  width: 78vw;
   height: 20vw;
   overflow: hidden;
-  overflow-y: scroll;
+  overflow-x: scroll;
 }
 
 .content {
+  width: fit-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-size: 20px;
   padding: 10px;
   color: black;
@@ -225,8 +229,10 @@ p {
 }
 
 .mysongs {
-  /* background: #f6f6f6; */
-  width: 82vw;
+  background-image: url('../assets/NightSky.webp');
+  background-size: cover;
+  width: 78vw;
+  height: 23vw;
   margin: 5% auto;
   padding: 20px;
   border-radius: 30px;
@@ -247,8 +253,8 @@ p {
 }
 
 .songcard {
-  width: 32vw;
-  height: 30vw;
+  width: 20vw;
+  height: 25vw;
   border: solid;
   position: absolute;
   margin-left: 5%;
@@ -256,19 +262,9 @@ p {
   text-align: center;
   border-radius: 20%;
   background-color: whitesmoke;
+  font-size: 10px;
 }
 
-.comments {
-  width: 32vw;
-  height: 42vw;
-  border: solid;
-  position: absolute;
-  margin-left: 45%;
-  margin-top:4%;
-  text-align: center;
-  background-color: whitesmoke;
-  border-radius: 5%;
-}
 
 .btn {
   display: flex;
@@ -297,14 +293,15 @@ p {
   border-width: 250px;
   border-color: black;
   border: solid;
-  margin-top: 5%;
-  margin-left: 40%;
-  display: flex;
   text-align: center;
-  justify-content: center;
-  align-items: center;
-  border-radius: 10%;
+  margin-left: 3%;
+  border-radius: 5%;
+  background-color: whitesmoke;
+  box-shadow: 10px 10px 5px #FCB0B3;
+  margin-left: 37%;
+  margin-top: 10%;
 }
+
 
 .btn {
   box-shadow: 5px 3px 5px lightblue;
@@ -383,6 +380,64 @@ p {
   width: fit-content;
 }
 
+.comments {
+  width: 48vw;
+  height: 42vw;
+  border: solid;
+  position: absolute;
+  margin-left: 30%;
+  margin-top:4%;
+  text-align: center;
+  background-color: whitesmoke;
+  border-radius: 5%;
+  overflow-y: scroll;
+  background: black;
+}
+
+.minicomments {
+  height: fit-content;
+  width: fit-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.minicomments2 > .minicomments {
+  margin-top: 5%;
+  width: 380vw;
+  height: fit-content;
+}
+
+.commenttag {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: solid;
+  border-radius: 5px;
+  width: fit-content;
+  margin: 10px;
+  height: fit-content;
+  padding: 10px;
+  box-shadow: 10px 10px 5px #FCB0B3;
+  font-family: 'Jersey 10';
+  color: whitesmoke;
+  font-size: 25px;
+}
+
+.usernamectag {
+  position: relative;
+  margin-top: -15%;
+}
+
+.createdctag {
+  position: relative;
+  overflow: hidden;
+  width: 20%;
+}
+
+.contentctag {
+
+}
 
 .btnsignup {
   background-color: #13262F;
@@ -443,11 +498,6 @@ p {
     overflow: hidden;
     text-overflow: ellipsis;
     font-size: 60%;
-}
-
-.comments > .minicomments {
-  width: 100%;
-  height: 100%;
 }
 
 .btnaddsong {
