--- a/views/songs/profile.ejs
+++ b/views/songs/profile.ejs
@@ -2,14 +2,17 @@
 <%- include('../partials/nav') %>
 
 <h1 class="profilename"><%= selectedUser.username %>'s Profile</h1>
-<section class="profileview">
   <section class="mysongs">
-    <h2>My Songs</h2>
     <div class="scrollme">
       <div class="content">
       <% songs.forEach( song =>  { %>
         <% if(song.owner.equals(user?._id)) { %>
-          <a style="text-decoration: none;" href="/songs/<%= song._id %>"><%= song.title %> - <%= song.artist %></a> |
+          <section class="songtag">
+            <div><%= song.artist %></a></div>
+            <div><a style="color: whitesmoke;" href="/songs/<%= song._id %>"><%= song.title %></a></div>
+            <div class="toprank"><%= song.rank %></div>
+            <div class="topmood"><%= song.wordAssociation %></div>
+            </section>
         <% } %>
         <% } )  %>
       </div>
@@ -39,8 +42,8 @@
   </section>
 
   <section class="mycomments">
+    <h4>My Song's Comments</h4>
     <div class="scrollme2">
-      <h4>My Song's Comments</h4>
       <div class="content2">
         <% songs.forEach( song => { %>
           <% if(song.owner.equals(user?._id)) { %>
@@ -51,7 +54,6 @@
         <% })  %>
       </div>
     </div>
-  </section>
 </section>
 
 <%- include('../partials/footer') %>
