--- a/views/partials/html-head.ejs
+++ b/views/partials/html-head.ejs
@@ -10,4 +10,6 @@
     </style>
   <title>Musical Genius</title>
   <link rel="shortcut icon" href="../assets/MusicNote.png" type="image/x-icon">
-  <h1 class="title">MUSICAL GENIUS</H1>
+  <div class="logo">
+  <h1 class="title">MUSICAL GENIUS</h1>
+  </div>
