--- a/views/songs/index.ejs
+++ b/views/songs/index.ejs
@@ -2,7 +2,7 @@
 <%- include('../partials/nav') %>
 
 <section class="store">
-    <h2>Discover Songs</h2>
+    <h2 style="color: whitesmoke;">Discover Songs</h2>
     <div class="scroll">
     <div class="content">
     <% songs.forEach( song => { %>
@@ -14,7 +14,7 @@
     <% })  %>
     </div>
 </div>
-<h3>Click on a song to find out more</h3>
+<h3 style="color: whitesmoke">Click on a song to find out more</h3>
 </section>
 
 <%- include('../partials/footer') %>
