--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -58,12 +58,16 @@ a:hover {
   background-color: whitesmoke;
 }
 
+h1 {
+  text-align: center;
+}
+
 .friend {
   text-align: center;
 }
 
 nav {
-  background-color: #f6f6f6;
+  background-image: url('../assets/NightSky.webp');
   color: #1a1a1a;
   display: flex;
   align-items: center;
@@ -111,6 +115,16 @@ h4 {
   text-align: center;
 }
 
+.genius {
+  margin-left: 10%;
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
+  height: 200px;
+  overflow-x: hidden;
+  overflow-x: scroll;
+}
+
 .person {
   display: flex;
   justify-content: center;
@@ -123,17 +137,6 @@ h4 {
   padding: 1%;
   border-radius: 5px 30px 5px 30px;
 }
-
-.genius {
-  margin-left: 10%;
-  width: 80%;
-  display: flex;
-  justify-content: space-between;
-  height: 200px;
-  overflow-x: hidden;
-  overflow-x: scroll;
-}
-
 
 span {
   display: inline-block;
@@ -165,6 +168,7 @@ p {
   text-shadow: 0 2px #13262F;
   font-weight: bold;
   color: #ed565b;
+  text-align: center;
 }
 
 .all {
@@ -192,7 +196,7 @@ p {
 }
 
 .store {
-  background-color: #ed565b;
+  background-image: url('../assets/NightSky.webp');
   box-shadow: 10px 10px 5px #13262F;
   width: 82vw;
   margin: 5% auto;
@@ -210,22 +214,19 @@ p {
   overflow-y: scroll;
 }
 
+.content {
+  width: fit-content;
+  font-size: 20px;
+  padding: 10px;
+  color: black;
+  margin: auto;
+}
+
 .scrollme {
   width: 78vw;
   height: 20vw;
   overflow: hidden;
   overflow-x: scroll;
-}
-
-.content {
-  width: fit-content;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 20px;
-  padding: 10px;
-  color: black;
-  margin: auto;
 }
 
 .mysongs {
@@ -252,9 +253,37 @@ p {
   box-shadow: 10px 10px 5px #FCECC9;
 }
 
+
+
+.btn {
+  display: flex;
+  justify-content: space-between;
+  margin-left: 30%;
+  margin-right: 30%;
+  box-shadow: 5px 3px 5px lightblue;
+}
+
+.profilesongview {
+  width: 24vw;
+  border: solid;
+  height: 10vh;
+  font-size: 40px;
+  border-radius: 20%;
+  margin-left: 4%;
+  margin-top: 5%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: whitesmoke;
+}
+
+.mycsongs {
+  font-size: 15px;
+}
+
 .songcard {
   width: 20vw;
-  height: 25vw;
+  height: 27vw;
   border: solid;
   position: absolute;
   margin-left: 5%;
@@ -264,29 +293,6 @@ p {
   background-color: whitesmoke;
   font-size: 10px;
 }
-
-
-.btn {
-  display: flex;
-  justify-content: space-between;
-  margin-left: 30%;
-  margin-right: 30%;
-}
-
-.profilesongview {
-  width: 32vw;
-  border: solid;
-  height: 10vh;
-  font-size: 40px;
-  border-radius: 5%;
-  margin-left: 6%;
-  margin-top: 5%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: whitesmoke;
-}
-
 .editsong {
   width: 200px;
   height: 300px;
@@ -300,11 +306,6 @@ p {
   box-shadow: 10px 10px 5px #FCB0B3;
   margin-left: 37%;
   margin-top: 10%;
-}
-
-
-.btn {
-  box-shadow: 5px 3px 5px lightblue;
 }
 
 
@@ -388,55 +389,68 @@ p {
   margin-left: 30%;
   margin-top:4%;
   text-align: center;
-  background-color: whitesmoke;
   border-radius: 5%;
-  overflow-y: scroll;
-  background: black;
-}
-
-.minicomments {
-  height: fit-content;
-  width: fit-content;
+  overflow-x: scroll;
+  overflow-x: hidden;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
 }
 
-.minicomments2 > .minicomments {
-  margin-top: 5%;
-  width: 380vw;
-  height: fit-content;
+.commments2 {
+  overflow-x: hidden;
+  overflow-x: scroll;
+}
+
+.date {
+  font-size: 10px;
+}
+
+.xcec {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: -20%;
 }
 
 .commenttag {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   border: solid;
   border-radius: 5px;
-  width: fit-content;
-  margin: 10px;
+  width: 40vw;
+  margin-left: 17px;
   height: fit-content;
   padding: 10px;
-  box-shadow: 10px 10px 5px #FCB0B3;
   font-family: 'Jersey 10';
   color: whitesmoke;
+  background-color:  black;
   font-size: 25px;
 }
 
 .usernamectag {
   position: relative;
-  margin-top: -15%;
+  font-size: 20px;
 }
 
 .createdctag {
   position: relative;
-  overflow: hidden;
-  width: 20%;
+  font-size: 15px;
 }
 
-.contentctag {
+.btneditc {
+  display: flex;
+  justify-content: space-evenly;
+  margin-left: 4%;
+  margin-top: -7%;
+}
 
+.xc {
+  background-color: black;
+  color: white;
+  border-radius: 10%/50%;
+}
+
+.ec {
+  background-color: black;
+  color: white;
+  border-radius: 10%/50%;
 }
 
 .btnsignup {
