--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
     <% } %>
   </nav>
 
-<h1 class="index">Welcome to The Perfect Place to showcase your favorite songs</h1>
+<h1 class="index">Welcome to The Perfect Place to showcase your favorite songs and discover songs</h1>
 <section class="recordimage">
 </section>
 <%- include('./partials/footer') %>
