--- a/views/songs/show.ejs
+++ b/views/songs/show.ejs
@@ -3,7 +3,7 @@
 
 <section class="showview">
   <div class="profilesongview">
-  <p><a style="text-decoration: none; color: black" href="/users/<%= song.owner._id %>"><%= song.owner.username %></a></p>
+  <p class="usernamesong"><a style="text-decoration: none; color: black" href="/users/<%= song.owner._id %>"><%= song.owner.username %></a></p>
   </div>
   <div class="songcard">
     <h1 class="artist"><%= song.artist %></h1>
