--- a/views/partials/html-head.ejs
+++ b/views/partials/html-head.ejs
@@ -5,9 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="../assets/images/MusicNoteFavicon.png" type="image/x-icon">
   <link rel="stylesheet" href="/stylesheets/style.css">
+  <link rel="stylesheet" href="/stylesheets/index.css">
+  <link rel="stylesheet" href="/stylesheets/auth.css">
+  <link rel="stylesheet" href="/stylesheets/profile.css">
+  <link rel="stylesheet" href="/stylesheets/edit.css">
+  <link rel="stylesheet" href="/stylesheets/show.css">
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda+SC:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Jersey+10&family=Matemasie&display=swap');
-    </style>
+  @import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda+SC:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Jersey+10&family=Matemasie&display=swap');
+  </style>
   <title>Musical Genius</title>
   <link rel="shortcut icon" href="../assets/MusicNote.png" type="image/x-icon">
   <div class="logo">
