--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -15,54 +15,6 @@ a:hover {
   font-weight: bold;
 }
 
-.asongs {
-  color: black;
-}
-
-.asongs:hover {
-  text-decoration: underline;
-  font-weight: bold;
-  color: whitesmoke;
-}
-
-.stag:hover {
-  border: solid;
-  border-color: #ed565b;
-  background: transparent;
-}
-
-.auth {
-  display: flex;
-  flex-direction: column;
-  margin-top: -10%;
-}
-
-.signup {
-  border: solid;
-  width: 38vw;
-  height: 35vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 20px;
-  margin: auto;
-  margin-top: 5%;
-  background-color: whitesmoke;
-}
-
-.signin {
-  border: solid;
-  width: 30vw;
-  height: 25vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 20px;
-  margin: auto;
-  margin-top: 5%;
-  background-color: whitesmoke;
-}
-
 h1 {
   text-align: center;
 }
@@ -95,20 +47,6 @@ nav > a {
   justify-content: center;
 }
 
-.usernamesong:hover {
-  text-decoration: underline;
-  color: whitesmoke;
-}
-
-.profile {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: smaller;
-}
-
-
-
 h2 {
   text-align: center;
   height: 30px;
@@ -123,29 +61,6 @@ h4 {
   text-align: center;
 }
 
-.genius {
-  margin-left: 10%;
-  width: 80%;
-  display: flex;
-  justify-content: space-between;
-  height: 200px;
-  overflow-x: hidden;
-  overflow-x: scroll;
-}
-
-.person {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 30%;
-  height: 50%;
-  background-color: #ed565b;
-  box-shadow: 10px 10px 5px #13262F;
-  margin: 15px;
-  padding: 1%;
-  border-radius: 5px 30px 5px 30px;
-}
-
 span {
   display: inline-block;
   font-size: smaller;
@@ -155,251 +70,12 @@ span {
   color: white;
 }
 
-#song-form {
-  width: 200px;
-  height: 300px;
-  border-width: 250px;
-  border-color: black;
-  border: solid;
-  text-align: center;
-  margin-left: 3%;
-  border-radius: 5%;
-  background-color: whitesmoke;
-  box-shadow: 10px 10px 5px #FCB0B3;
-}
-
 p {
   text-align: center;
 }
 
-.index {
-  text-shadow: 0 2px #13262F;
-  font-weight: bold;
-  color: #ed565b;
-  text-align: center;
-}
-
-.all {
-  text-shadow: 0 2px #13262F;
-  font-weight: bold;
-  color: #ed565b;
-  text-decoration: underline #13262F;
-  margin-top: 10%;
-  text-align: center;
-}
-
-.title {
-  text-shadow: 0 2px #13262F;
-  font-weight: bold;
-  color: #ed565b;
-  text-align: center;
-}
-
-.profilename {
-  text-shadow: 0 2px #13262F;
-  font-weight: bold;
-  color: #ed565b;
-  text-decoration: underline #13262F;
-  text-align: center;
-}
-
-.store {
-  box-shadow: 10px 10px 5px #13262F;
-  width: 82vw;
-  margin: 5% auto;
-  padding: 20px;
-  border-radius: 10px;
-  border-color: black;
-  border: solid;
-}
-
-.scroll {
-  width: 82vw;
-  height: 40vw;
-  overflow: hidden;
-  overflow-y: scroll;
-  border: solid;
-  border-radius: 20px;
-  border-top-width: medium;
-  border-bottom-width: medium;
-  border-left-width: 0px;
-  border-right-width: 0px;
-}
-
-.content {
-  width: fit-content;
-  font-size: 20px;
-  padding: 10px;
-  color: black;
-  margin: auto;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-.stag {
-  border: solid;
-  width: fit-content;
-  padding: 4px;
-  margin: 2px;
-  border-radius: 10px 20px 10px 20px;
-  text-align: center;
-  height: fit-content;
-}
-
-.scrollme {
-  width: 78vw;
-  height: 20vw;
-  overflow: hidden;
-  overflow-x: scroll;
-}
-
-.mysongs {
-  background-image: url('../assets/NightSky.webp');
-  background-size: cover;
-  width: 78vw;
-  height: 23vw;
-  margin: 5% auto;
-  padding: 20px;
-  border-radius: 30px;
-  border-color: black;
-  border: solid;
-  box-shadow: 10px 10px 5px #FCB0B3;
-}
-
-.showview {
-  width: 82vw;
-  height: 50vw;
-  border: solid;
-  border-radius: 20px;
-  margin: auto;
-  margin-top: 4%;
-  display: flex;
-  box-shadow: 10px 10px 5px #FCECC9;
-}
-
-
-
-.btn {
-  display: flex;
-  justify-content: space-between;
-  margin-left: 30%;
-  margin-right: 30%;
-  box-shadow: 5px 3px 5px lightblue;
-}
-
-.profilesongview {
-  width: 25vw;
-  border: solid;
-  height: 10vh;
-  font-size: 40px;
-  margin-left: 4%;
-  margin-top: 5%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-left-width: 0px;
-  border-right-width: 0px;
-  border-radius: 30px;
-}
-
 .mycsongs {
   font-size: 15px;
-}
-
-.songcard {
-  width: fit-content;
-  height: fit-content;
-  border: solid;
-  position: relative;
-  margin-left: -27%;
-  margin-top: 20%;
-  text-align: center;
-  font-size: 10px;
-  border-radius: 10px;
-}
-
-
-
-.comments {
-  width: 48vw;
-  height: 42vw;
-  border: solid;
-  position: relative;
-  margin-top:5%;
-  margin-left: 7%;
-  text-align: center;
-  border-radius: 5%;
-  overflow-x: scroll;
-  overflow-x: hidden;
-  display: flex;
-  flex-direction: column;
-}
-
-.songword {
-  font-size: 30px;
-  position: relative;
-  margin-top: 20%;
-  margin-left: -30%;
-}
-
-.songrank {
-  font-size: 65px;
-  position: relative;
-  margin-left: 75%;
-  margin-top: -40%;
-}
-
-.artist {
-  font-size: 20px;
-}
-
-.commentbox {
-  position: relative;
-  margin-top: 25%;
-}
-
-.editsong {
-  width: 200px;
-  height: 300px;
-  border-width: 250px;
-  border-color: black;
-  border: solid;
-  text-align: center;
-  margin-left: 3%;
-  border-radius: 5%;
-  background-color: whitesmoke;
-  box-shadow: 10px 10px 5px #FCB0B3;
-  margin-left: 37%;
-  margin-top: 10%;
-}
-
-
-.mycomments {
-  width: 48vw;
-  height: 37vw;
-  border: solid;
-  position: absolute;
-  margin-left: 35%;
-  margin-top:-33%;
-  text-align: center;
-  border-radius: 5%;
-  overflow-x: scroll;
-  overflow-x: hidden;
-  display: flex;
-  flex-direction: column;
-}
-
-.content2 {
-  font-size: 20px;
-  padding: 10px;
-  text-align: center;
-  overflow-x: scroll;
-  overflow-x: hidden;
-}
-
-.scrollme2 {
-
 }
 
 .theirwords {
@@ -427,45 +103,19 @@ p {
   text-align: center;
 }
 
-.theirsongs {
-  width: 82vw;
-  background-image: url('../assets/NightSky.webp');
-  background-size: cover;
-  height: 30vw;
-  overflow-x: scroll;
-  border-radius: 5%;
-  margin-top: 5%;
-  margin-left: 2%;
-  border: solid;
-}
-
-.eachsong {
-  width: fit-content;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.scrollme4 > .eachsong {
-  margin-top: 5%;
-  width: 380vw;
-  height: 25vw;
-  width: fit-content;
-}
-
-.commments2 {
-  overflow-x: hidden;
-  overflow-x: scroll;
-}
-
 .date {
   font-size: 10px;
 }
 
-.xcec {
-  display: flex;
-  justify-content: space-evenly;
-  margin-top: -20%;
+
+.usernamectag {
+  position: relative;
+  font-size: 20px;
+}
+
+.createdctag {
+  position: relative;
+  font-size: 15px;
 }
 
 .commenttag {
@@ -481,45 +131,24 @@ p {
   font-size: 25px;
 }
 
-.usernamectag {
-  position: relative;
-  font-size: 20px;
-}
-
-.createdctag {
-  position: relative;
-  font-size: 15px;
-}
-
-.btneditc {
-  display: flex;
-  justify-content: space-evenly;
-  margin-left: 4%;
-  margin-top: -7%;
-}
-
 .xc {
   background-color: black;
   color: white;
   border-radius: 10%/50%;
+  position: relative;
+  margin-left: -90%;
 }
 
 .ec {
   background-color: black;
   color: white;
   border-radius: 10%/50%;
+  position: relative;
+  margin-left: 85%;
 }
 
-.btnsignup {
-  background-color: #13262F;
-  color: white;
-  border-radius: 10%/50%;
-}
-
-.btnsignin {
-  background-color: #13262F;
-  color: white;
-  border-radius: 10%/50%;
+.xcec > .ec {
+  margin-top: -20%;
 }
 
 #password {
@@ -534,6 +163,7 @@ p {
 }
 
 .navbar {
+  margin-top: -5%;
   margin-left: 0%;
   width: 95%;
 }
@@ -567,51 +197,4 @@ p {
     overflow: hidden;
     text-overflow: ellipsis;
     font-size: 60%;
-}
-
-.btnaddsong {
-  background-color: #13262F;
-  color: white;
-  border-radius: 10%/50%;
-}
-
-.recordimage {
-  background-image: url('../assets/Records.jpg');
-  background-size: cover;
-  height: 500px;
-  border-radius: 10%;
-  border: solid;
-}
-
-.signuphover:hover {
-  border: 1mm ridge #FCB0B3;
-}
-
-
-.songtag {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  border: solid;
-  border-radius: 5px;
-  width: 350px;
-  margin: 10px;
-  height: 130px;
-  padding: 10px;
-  box-shadow: 10px 10px 5px #FCB0B3;
-  font-family: 'Jersey 10';
-  color: whitesmoke;
-  font-size: 30px;
-  background-image: url('../assets/sunset.jpg');
-  background-size: cover;
-}
-
-.topmood {
-  position: relative;
-}
-
-.toprank > .songtag {
-  position: absolute;
-  font-size: 30px;
 }
