--- a/views/songs/difprofile.ejs
+++ b/views/songs/difprofile.ejs
@@ -1,19 +1,19 @@
 <%- include('../partials/html-head') %>
 <%- include('../partials/nav') %>
 
-<h1 class="title"><%= selectedUser.username %>'s Profile Page</h1>
+<h1 class="profilename"><%= selectedUser.username %>'s Profile Page</h1>
 <section class="theirsongs">
   <div class="scrollme4">
     <div class="eachsong">
       <% songs.forEach( song => { %>
-      <% if(song.owner.equals(selectedUser?._id)) { %>
-        <section class="songtag">
-        <div><%= song.artist %></a></div>
-        <div><a style="color: whitesmoke;" href="/songs/<%= song._id %>"><%= song.title %></a></div>
-        <div class="toprank"><%= song.rank %></div>
-        <div class="topmood"><%= song.wordAssociation %></div>
-        </section>
-      <% } %>
+        <% if(song.owner.equals(selectedUser?._id)) { %>
+          <section class="songtag">
+          <div><%= song.artist %></a></div>
+          <div><a style="color: whitesmoke;" href="/songs/<%= song._id %>"><%= song.title %></a></div>
+          <div class="toprank"><%= song.rank %></div>
+          <div class="topmood"><%= song.wordAssociation %></div>
+          </section>
+        <% } %>
       <% })  %>
     </div>
   </div>
